add the core structure of the webpage

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Study Help club for students who need help in Stockholm, Sweden">
+    <meta name="keywords" content="Study Help, Student, Study, Stockholm, Sweden">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Study Help</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <nav>navigation/heading</nav>
+    <header>header content</header>
+    <section>about us</section>
+    <section>sign up</section>
+    <footer>contact/social links</footer>
 </body>
 </html>
