add navigation bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <title>Study Help</title>
 </head>
 <body>
-    <nav>navigation/heading</nav>
+    <nav>
+        <a href="#header"><h1>StudyHelp</h1></a>
+        <ul>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#sign-up">Sign Up</a></li>
+            <li><a href="#about">About Us</a></li>
+        </ul>
+    </nav>
     <header>header content</header>
     <section>about us</section>
     <section>sign up</section>
