--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <nav>
-        <a href="#header"><h1>StudyHelp</h1></a>
-        <ul>
+        <a href="#header"><h1 id= "logo">StudyHelp</h1></a>
+        <ul id="menu">
             <li><a href="#contact">Contact</a></li>
             <li><a href="#sign-up">Sign Up</a></li>
             <li><a href="#about">About Us</a></li>
