add image and zoom effect

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <li><a href="#about">About Us</a></li>
         </ul>
     </nav>
-    <header>header content</header>
+    <header id="outer">
+        <div id="my-image"></div>
+    </header>
     <section>about us</section>
     <section>sign up</section>
     <footer>contact/social links</footer>
