add text to image and style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         </ul>
     </nav>
     <header id="outer">
-        <div id="my-image"></div>
+            <div id="my-image">
+                <div id="image-text">
+                    <h2>StudyHelp</h2>
+                    <h3>Whenever you need us</h3>
+                </div>
+            </div>
     </header>
     <section>about us</section>
     <section>sign up</section>
