--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul id="menu">
             <li><a href="#contact">Contact</a></li>
             <li><a href="#sign-up">Sign Up</a></li>
-            <li><a href="#about">About Us</a></li>
+            <li><a href="#about-us">About Us</a></li>
         </ul>
     </nav>
     <header id="outer">
@@ -27,7 +27,36 @@
                 </div>
             </div>
     </header>
-    <section>about us</section>
+    <section id="about-us">
+        <div class="center">
+            <h2>About Us</h2>
+            <p>At StudyHelp you can get help with your homework in several subjects</p>
+        </div>
+        <div id="application">
+            <p>How to find your Studybuddy:</p>
+            <ol class="space">
+                <li>Register your interest and we will contact you within 24 hours</li>
+                <li>Personal matching by studybuddy, we solve all the practicalities</li>
+                <li>Meet your study buddy and succeed in your studies</li>
+            </ol>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <th>Class</th>
+                    <th>Price</th>
+                </tr>
+                <tr>
+                    <td>high school</td>
+                    <td>39 euro per hour</td>
+                </tr>
+                <tr>
+                    <td>junior</td>
+                    <td>35 euro per hour</td>
+                </tr>
+            </table>
+        </div>
+    </section>
     <section>sign up</section>
     <footer>contact/social links</footer>
 </body>
