move navigation to header and put comments

--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
     <title>Study Help</title>
 </head>
 <body>
-    <nav>
-        <a href="#header"><h1 id= "logo">StudyHelp</h1></a>
-        <ul id="menu">
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#sign-up">Sign Up</a></li>
-            <li><a href="#about-us">About Us</a></li>
-        </ul>
-    </nav>
+
     <header id="outer">
-            <div id="my-image">
-                <div id="image-text">
-                    <h2>StudyHelp</h2>
-                    <h3>Whenever you need us</h3>
-                </div>
+        <!--the navigation bar-->
+        <nav>
+            <a href="#header"><h1 id= "logo">StudyHelp</h1></a>
+            <ul id="menu">
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#sign-up">Sign Up</a></li>
+                <li><a href="#about-us">About Us</a></li>
+            </ul>
+        </nav>
+        <!--the image with covertext-->
+        <div id="my-image">
+            <div id="image-text">
+                <h2>StudyHelp</h2>
+                <h3>Whenever you need us</h3>
             </div>
+        </div>
     </header>
     <section id="about-us">
         <div class="center">
@@ -58,7 +61,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="sign-up">
         <form action="action_page.php" style="border:1px solid #ccc"> 
             <div class="container">
               <h1>Sign Up</h1>
@@ -87,6 +90,6 @@
             </div>
           </form>
     </section>
-    <footer>contact/social links</footer>
+    <footer></footer>
 </body>
 </html>
