add footer structure

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 </head>
 
 <body>
-
+    <!--header and naviagation bar-->
     <header>
-        <!--the navigation bar-->
         <nav>
             <a href="index.html">
                 <h1 id="logo">StudyHelp</h1>
@@ -104,13 +103,10 @@
                 </div>
             </form>
         </section>
-    </main>
 
-    <!--contact us and social links-->
-    <footer>
-        <div>
-            <section id="contact">
-                <h2>Contact us</h2>
+        <section id="contact">
+            <div>
+                <h2 class="text-center">Contact us</h2>
 
                 <div class="text-right contact-box-right">
                     <h3>Get in touch</h3>
@@ -126,13 +122,26 @@
                 </div>
                 <div class="contact-box-center">
                     <h3>Address</h3>
-                    <p>Coders Coffeehouse,<br>42 Coffeebean street,<br>Dublin</p>
+                    <p>StudyHelp,<br>73 highway, Stockholm</p>
                 </div>
-            </section>
-        </div>
-        <!--social links-->
-        <div>
-            
+            </div>
+        </section>
+    </main>
+
+    <!--social links-->
+    <footer class="center">
+        <div id="social-media">
+
+            <span>Find us on:</span>
+            <br>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener"
+                aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-facebook" style="color: #1f2551;"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener"
+                aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+            <a href="https://www.twitter.com" target="_blank" rel="noopener"
+                aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+            <br><br><br>
+            <p>Copyright © StudyHelp 2023</p>
         </div>
     </footer>
 </body>
