--- a/index.html
+++ b/index.html
@@ -134,13 +134,16 @@
 
             <span>Find us on:</span>
             <br>
-            <a href="https://www.facebook.com" target="_blank" rel="noopener"
-                aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-facebook" style="color: #1f2551;"></i></a>
-            <a href="https://www.instagram.com" target="_blank" rel="noopener"
-                aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
-            <a href="https://www.twitter.com" target="_blank" rel="noopener"
-                aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
-            <br><br><br>
+            <ul>
+                <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                        aria-label="Find us on Facebook (link opens in a new tab)"><i
+                            class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                        aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a></li>
+                <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
+                        aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a></li>
+            </ul>
+            <br>
             <p>Copyright © StudyHelp 2023</p>
         </div>
     </footer>
