add links to the footer

--- a/index.html
+++ b/index.html
@@ -137,11 +137,18 @@
             <ul>
                 <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                         aria-label="Find us on Facebook (link opens in a new tab)"><i
-                            class="fa-brands fa-facebook"></i></a></li>
+                            class="fa-brands fa-facebook"></i></a>
+                </li>
+
                 <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                        aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a></li>
+                        aria-label="Find us on Instagram (link opens in a new tab)"><i
+                        class="fa-brands fa-facebook"></i></a>
+                </li>
+
                 <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
-                        aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a></li>
+                        aria-label="Find us on Twitter (link opens in a new tab)"><i
+                        class="fa-brands fa-facebook"></i></a>
+                </li>
             </ul>
             <br>
             <p>Copyright © StudyHelp 2023</p>
