add arial-label to the links

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <h1 id="logo">StudyHelp</h1>
             </a>
             <ul id="menu">
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#sign-up">Sign Up</a></li>
-                <li><a href="#about-us">About Us</a></li>
+                <li><a href="#contact" aria-label=": this link takes you to the contact section">Contact</a></li>
+                <li><a href="#sign-up" aria-label=": this link takes you to the signup section">Sign Up</a></li>
+                <li><a href="#about-us" aria-label=": this link takes you to the about-us section">About Us</a></li>
             </ul>
         </nav>
     </header>
