add script in the footer

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                         class="fa-brands fa-facebook"></i></a>
                 </li>
             </ul>
+            <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
     </footer>
 </body>
 
