--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
     <footer class="center">
             <ul>
                 <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
-                        aria-label="Find us on Facebook (link opens in a new tab)"><i
-                            class="fa-brands fa-facebook"></i></a>
+                        aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-facebook fa-sm"></i></a>
                 </li>
 
                 <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
