add footer social media fonts

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </a>
             <ul id="menu">
                 <li><a href="#contact" aria-label=": this link takes you to the contact section">Contact</a></li>
-                <li><a href="#sign-up" aria-label=": this link takes you to the signup section">Sign Up</a></li>
-                <li><a href="#about-us" aria-label=": this link takes you to the about-us section">About Us</a></li>
+                <li><a href="#sign-up" aria-label=": this link takes you to  section">Sign Up</a></li>
+                <li><a href="#about-us" aria-label=": this link takes you to the contact section">About Us</a></li>
             </ul>
         </nav>
     </header>
@@ -93,7 +93,8 @@
                         me</label>
 
                     <br><br>
-                    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.
+                    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue"
+                            aria-label="Click on terms and privacy">Terms & Privacy</a>.
                     </p>
                     <br><br>
                     <div class="clearfix">
@@ -129,23 +130,24 @@
     </main>
 
     <!--social links-->
-    <footer class="center">
-            <ul>
-                <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
-                        aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-facebook fa-sm"></i></a>
-                </li>
+    <footer>
+        <ul class="social">
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
 
-                <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                        aria-label="Find us on Instagram (link opens in a new tab)"><i
-                        class="fa-brands fa-facebook"></i></a>
-                </li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Find us on Instagram (link opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
 
-                <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
-                        aria-label="Find us on Twitter (link opens in a new tab)"><i
-                        class="fa-brands fa-facebook"></i></a>
-                </li>
-            </ul>
-            <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
+                    aria-label="Find us on Twitter (link opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+        </ul>
+
+        <!-- Fontawesome script -->
+        <script src="https://kit.fontawesome.com/5aef656d00.js" crossorigin="anonymous"></script>
     </footer>
 </body>
 
