--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </section>
 
-        <!--about-us section with more information-->
+        <!--about-us section with more information to the user-->
         <section id="about-us">
             <div class="center">
                 <h2>About Us</h2>
@@ -53,6 +53,7 @@
                     <li>Meet your study buddy and succeed in your studies</li>
                 </ol>
             </div>
+            
             <div>
                 <table>
                     <tr>
@@ -71,6 +72,7 @@
             </div>
         </section>
 
+        <!--this is the sign up form-->
         <section id="sign-up">
             <form action="signup.html" style="border:1px solid #ccc">
                 <div class="container">
@@ -78,11 +80,11 @@
                     <br>
                     <p>Please fill in this form to create an account.</p>
                     <br><br>
-
-                    <label for="email"><b>Email</b></label>
+                     
+                    <label for="email">Email</label>
                     <input type="text" placeholder="Enter Email" name="email" required>
 
-                    <label for="psw"><b>Password</b></label>
+                    <label for="psw">Password</label>
                     <input type="password" placeholder="Enter Password" name="psw" required>
 
                     <label for="psw-repeat"><b>Repeat Password</b></label>
@@ -97,14 +99,14 @@
                             aria-label="Click on terms and privacy">Terms & Privacy</a>.
                     </p>
                     <br><br>
-                    <div class="clearfix">
-                        <button type="button" class="cancelbtn">Cancel</button>
-                        <button type="submit" class="signupbtn">Sign Up</button>
-                    </div>
+                    <button type="button" class="cancelbtn">Cancel</button>
+                    <button type="submit" class="signupbtn">Sign Up</button>
+
                 </div>
             </form>
         </section>
 
+        <!--Contact section with extra information to the user-->
         <section id="contact">
             <div>
                 <h2 class="text-center">Contact us</h2>
@@ -129,7 +131,7 @@
         </section>
     </main>
 
-    <!--social links-->
+    <!--footer/social links/fonts-->
     <footer>
         <ul class="social">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
