--- a/index.html
+++ b/index.html
@@ -74,15 +74,21 @@
 
         <!--this is the sign up form-->
         <section id="sign-up">
-            <form action="signup.html" style="border:1px solid #ccc">
-                <div class="container">
-                    <h1>Sign Up</h1>
-                    <br>
-                    <p>Please fill in this form to create an account.</p>
-                    <br><br>
+
+            <div class="container">
+                <h1>Sign Up</h1>
+                <br>
+                <p>Please fill in this form to create an account.</p>
+                <br><br>
+                <form action="signup.html" style="border:1px solid #ccc">
+                    <label for="first name">Email</label>
+                    <input type="text" placeholder="Enter first name" name="first name" required>
+
+                    <label for="last name">Email</label>
+                    <input type="text" placeholder="Enter last name" name="last name" required>
 
                     <label for="email">Email</label>
-                    <input type="text" placeholder="Enter Email" name="email" required>
+                    <input type="email" placeholder="Enter Email" name="email" required>
 
                     <label for="psw">Password</label>
                     <input type="password" placeholder="Enter Password" name="psw" required>
@@ -94,16 +100,13 @@
                         <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember
                         me</label>
 
-                    <br><br>
-                    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue"
-                            aria-label="Click on terms and privacy">Terms & Privacy</a>.
-                    </p>
-                    <br><br>
                     <button type="button" class="cancelbtn">Cancel</button>
                     <button type="submit" class="signupbtn">Sign Up</button>
-
-                </div>
-            </form>
+                </form>
+                
+                <p>By creating an account you agree to our <a href="#" style="color:dodgerblue"
+                        aria-label="Click on terms and privacy">Terms & Privacy</a>.</p>
+            </div>
         </section>
 
         <!--Contact section with extra information to the user-->
