--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
         </section>
 
         <!--this is the sign up form-->
-        <section id="sign-up">
+        <section>
 
-            <div class="container">
-                <h1>Sign Up</h1>
-                <br>
-                <p>Please fill in this form to create an account.</p>
-                <br><br>
+            <div class="signup-box">
+
                 <form action="signup.html" style="border:1px solid #ccc">
+                    <h1>Sign Up</h1>
+                    <br>
+                    <p>Please fill in this form to create an account.</p>
+                    <br><br>
                     <label for="first name">Email</label>
                     <input type="text" placeholder="Enter first name" name="first name" required>
 
@@ -103,7 +104,7 @@
                     <button type="button" class="cancelbtn">Cancel</button>
                     <button type="submit" class="signupbtn">Sign Up</button>
                 </form>
-                
+
                 <p>By creating an account you agree to our <a href="#" style="color:dodgerblue"
                         aria-label="Click on terms and privacy">Terms & Privacy</a>.</p>
             </div>
