--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Study Help club for students who need help in Stockholm, Sweden">
     <meta name="keywords" content="Study Help, Student, Study, Stockholm, Sweden">
-
-
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Study Help</title>
 </head>
@@ -73,15 +71,11 @@
         </section>
 
         <!--this is the sign up form-->
-        <section>
-
-            <div class="signup-box">
-
+        <section id="container">
+            <div id="signup-box">
                 <form action="signup.html" style="border:1px solid #ccc">
                     <h1>Sign Up</h1>
-                    <br>
                     <p>Please fill in this form to create an account.</p>
-                    <br><br>
                     <label for="first name">Email</label>
                     <input type="text" placeholder="Enter first name" name="first name" required>
 
@@ -94,19 +88,12 @@
                     <label for="psw">Password</label>
                     <input type="password" placeholder="Enter Password" name="psw" required>
 
-                    <label for="psw-repeat"><b>Repeat Password</b></label>
+                    <label for="psw-repeat">Repeat Password</label>
                     <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-
-                    <label>
-                        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember
-                        me</label>
-
-                    <button type="button" class="cancelbtn">Cancel</button>
                     <button type="submit" class="signupbtn">Sign Up</button>
-                </form>
-
-                <p>By creating an account you agree to our <a href="#" style="color:dodgerblue"
+                    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue"
                         aria-label="Click on terms and privacy">Terms & Privacy</a>.</p>
+                </form> 
             </div>
         </section>
 
