--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Study Help club for students who need help in Stockholm, Sweden">
     <meta name="keywords" content="Study Help, Student, Study, Stockholm, Sweden">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <title>Study Help</title>
 </head>
 
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <a href="index.html">
-                <h1 id="logo">StudyHelp</h1>
+                <h1 id="logo">StudyHelp!!</h1>
             </a>
             <ul id="menu">
                 <li><a href="#contact" aria-label=": this link takes you to the contact section">Contact</a></li>
