Change styling to header and use flexbox

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <!--header and naviagation bar-->
-    <header>
+    <header class="aligner header-spacing">
+        <a href="index.html">
+            <h1 id="logo">StudyHelp</h1>
+        </a>
         <nav>
-            <a href="index.html">
-                <h1 id="logo">StudyHelp!!</h1>
-            </a>
             <ul id="menu">
                 <li><a href="#contact" aria-label=": this link takes you to the contact section">Contact</a></li>
                 <li><a href="#sign-up" aria-label=": this link takes you to  section">Sign Up</a></li>
@@ -92,8 +92,8 @@
                     <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
                     <button type="submit" class="signupbtn">Sign Up</button>
                     <p>By creating an account you agree to our <a href="#" style="color:dodgerblue"
-                        aria-label="Click on terms and privacy">Terms & Privacy</a>.</p>
-                </form> 
+                            aria-label="Click on terms and privacy">Terms & Privacy</a>.</p>
+                </form>
             </div>
         </section>
 
