Change landing page styling

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="my-image">
                 <div id="image-text">
                     <h2>StudyHelp</h2>
-                    <h3>Whenever you need us</h3>
+                    <h3>Get your homework done!</h3>
                 </div>
             </div>
         </section>
