--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Study Help club for students who need help in Stockholm, Sweden">
     <meta name="keywords" content="Study Help, Student, Study, Stockholm, Sweden">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Study Help</title>
 </head>
 
