change styling for about us section

--- a/index.html
+++ b/index.html
@@ -41,32 +41,33 @@
         <section id="about-us">
             <div class="center">
                 <h2>About Us</h2>
-                <p>At StudyHelp you can get help with your homework in several subjects</p>
+                <h3>Homework help & study coaching</h3>
             </div>
-            <div id="application">
-                <p>How to find your Studybuddy:</p>
-                <ol class="space">
-                    <li>Register your interest and we will contact you within 24 hours</li>
-                    <li>Personal matching by studybuddy, we solve all the practicalities</li>
-                    <li>Meet your study buddy and succeed in your studies</li>
-                </ol>
-            </div>
-
-            <div>
-                <table>
-                    <tr>
-                        <th>Class</th>
-                        <th>Price</th>
-                    </tr>
-                    <tr>
-                        <td>high school</td>
-                        <td>39 euro per hour</td>
-                    </tr>
-                    <tr>
-                        <td>junior</td>
-                        <td>35 euro per hour</td>
-                    </tr>
-                </table>
+            <div class="aligner">
+                <div id="application">
+                    <p>How to find your Studybuddy:</p>
+                    <ol class="space">
+                        <li>Register your interest and we will contact you within 24 hours</li>
+                        <li>Personal matching by studybuddy, we solve all the practicalities</li>
+                        <li>Meet your study buddy and succeed in your studies</li>
+                    </ol>
+                </div>
+                <div>
+                    <table>
+                        <tr>
+                            <th>Class</th>
+                            <th>Price</th>
+                        </tr>
+                        <tr>
+                            <td>high school</td>
+                            <td>39 euro per hour</td>
+                        </tr>
+                        <tr>
+                            <td>junior</td>
+                            <td>35 euro per hour</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </section>
 
