--- a/index.html
+++ b/index.html
@@ -72,40 +72,52 @@
         </section>
 
         <!--this is the sign up form-->
-        <section id="container">
-            <div id="signup-box">
-                <form action="signup.html" style="border:1px solid #ccc">
-                    <h1>Sign Up</h1>
-                    <p>Please fill in this form to create an account.</p>
-                    <label for="first name">Email</label>
+        <section id="signup-box">
+            <div class="center">
+                <h2>Sign Up</h2>
+                <p>Please fill in this form to create an account.</p>
+            </div>
+            <form action="signup.html">
+                <div>
+                    <label for="first name">First Name</label>
                     <input type="text" placeholder="Enter first name" name="first name" required>
-
-                    <label for="last name">Email</label>
+                </div>
+                <div>
+                    <label for="last name">Last Name</label>
                     <input type="text" placeholder="Enter last name" name="last name" required>
-
+                </div>
+                <div>
                     <label for="email">Email</label>
                     <input type="email" placeholder="Enter Email" name="email" required>
-
+                </div>
+                <div>
                     <label for="psw">Password</label>
                     <input type="password" placeholder="Enter Password" name="psw" required>
-
+                </div>
+                <div>
                     <label for="psw-repeat">Repeat Password</label>
                     <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-                    <button type="submit" class="signupbtn">Sign Up</button>
-                    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue"
-                            aria-label="Click on terms and privacy">Terms & Privacy</a>.</p>
-                </form>
-            </div>
+                </div>
+                <div>
+                    <p>By creating an account you agree to our
+                        <a href="#" aria-label="Click on terms and privacy">Terms & Privacy</a>.
+                    </p>
+                </div>
+                <div class="row">
+                    <button type="submit" class="btn">Sign Up</button>
+                    <button type="reset" class="btn">Reset</button>
+                </div>
+            </form>
         </section>
+
 
         <!--Contact section with extra information to the user-->
         <section id="contact">
-            <div>
-                <h2 class="text-center">Contact us</h2>
 
-                <div class="text-right contact-box-right">
+            <h2>Contact us</h2>
+            <div class="aligner">
+                <div>
                     <h3>Get in touch</h3>
-
                     <div>
                         <span class="bold">Phone: </span>
                         <span>015 345 678 910</span>
@@ -114,10 +126,25 @@
                         <span class="bold">Email: </span>
                         <span>email@StudyHelp.com</span>
                     </div>
+                    <div>
+                        <span class="bold">Address: </span>
+                        <span>StudyHelp,73 highway,<br>Stockholm</span>
+                    </div>
                 </div>
-                <div class="contact-box-center">
-                    <h3>Address</h3>
-                    <p>StudyHelp,<br>73 highway, Stockholm</p>
+                <div>
+                    <h3>Opening hours:</h3>
+                    <div>
+                        <span class="bold">monday-thirsday: </span>
+                        <span>08-17</span>
+                    </div>
+                    <div>
+                        <span class="bold">friday: </span>
+                        <span>09-17</span>
+                    </div>
+                    <div>
+                        <span class="bold">closed for lunch: </span>
+                        <span>12-13</span>
+                    </div>
                 </div>
             </div>
         </section>
