Change footer style

--- a/index.html
+++ b/index.html
@@ -150,23 +150,26 @@
         </section>
     </main>
 
+
     <!--footer/social links/fonts-->
     <footer>
         <ul class="social">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
-                    aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    aria-label="Find us on Facebook (link opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
             </li>
-
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Find us on Instagram (link opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a>
+                    aria-label="Find us on Instagram (link opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
             </li>
-
             <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
-                    aria-label="Find us on Twitter (link opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                    aria-label="Find us on Twitter (link opens in a new tab)">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
             </li>
         </ul>
-
         <!-- Fontawesome script -->
         <script src="https://kit.fontawesome.com/5aef656d00.js" crossorigin="anonymous"></script>
     </footer>
