--- a/index.html
+++ b/index.html
@@ -79,24 +79,24 @@
             </div>
             <form action="signup.html">
                 <div>
-                    <label for="first name">First Name</label>
-                    <input type="text" placeholder="Enter first name" name="first name" required>
+                    <label for="first-name">First Name</label>
+                    <input type="text" placeholder="Enter first name" id="first-name" required>
                 </div>
                 <div>
-                    <label for="last name">Last Name</label>
-                    <input type="text" placeholder="Enter last name" name="last name" required>
+                    <label for="last-name">Last Name</label>
+                    <input type="text" placeholder="Enter last name" id="last-name" required>
                 </div>
-                <div>
+                <div>-
                     <label for="email">Email</label>
-                    <input type="email" placeholder="Enter Email" name="email" required>
+                    <input type="email" placeholder="Enter Email" id="email" required>
                 </div>
                 <div>
                     <label for="psw">Password</label>
-                    <input type="password" placeholder="Enter Password" name="psw" required>
+                    <input type="password" placeholder="Enter Password" id="psw" required>
                 </div>
                 <div>
                     <label for="psw-repeat">Repeat Password</label>
-                    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+                    <input type="password" placeholder="Repeat Password" id="psw-repeat" required>
                 </div>
                 <div>
                     <p>By creating an account you agree to our
