Change About us section

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             </div>
             <div class="aligner">
                 <div id="application">
-                    <p>How to find your Studybuddy:</p>
+                    <p>We offer:</p>
                     <ol class="space">
-                        <li>Register your interest and we will contact you within 24 hours</li>
-                        <li>Personal matching by studybuddy, we solve all the practicalities</li>
-                        <li>Meet your study buddy and succeed in your studies</li>
+                        <li>At Studyhelp, you can always choose between <br>homework help at home, or homework help online.</li>
+                        <li>Our online service is an excellent alternative to physical<br> homework help and is both flexible and educational.</li>
+                        <li>Studybuddy and student meet online, via our online <br>platform which is specially designed for homework help.</li>
                     </ol>
                 </div>
                 <div>
