--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <label for="last-name">Last Name</label>
                     <input type="text" placeholder="Enter last name" id="last-name" required>
                 </div>
-                <div>-
+                <div>
                     <label for="email">Email</label>
                     <input type="email" placeholder="Enter Email" id="email" required>
                 </div>
