add content to readme file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="#contact" aria-label=": this link takes you to the contact section">Contact</a></li>
-                <li><a href="#sign-up" aria-label=": this link takes you to  section">Sign Up</a></li>
+                <li><a href="#signup-box" aria-label=": this link takes you to  section">Sign Up</a></li>
                 <li><a href="#about-us" aria-label=": this link takes you to the contact section">About Us</a></li>
             </ul>
         </nav>
